Missed de strings

--- a/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang_he.po
+++ b/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang_he.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-19 15:12+0200\n"
-"PO-Revision-Date: 2013-03-19 21:36+0200\n"
+"PO-Revision-Date: 2013-03-19 22:47+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -7680,6 +7680,7 @@ msgstr "Sie werden teilweise 1 Schlafzimmer benutzen."
 #, php-format
 msgid "You will use 1 full dorm and 1 partially."
 msgstr ""
+"Sie werden 1 ganzes Schlafzimmer benutzen und 1 Schlafzimmer nur teilweise."
 
 #: ../code/application/views/helpfile/pofields.php:728
 #, php-format
